# ccl-mpr

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  train_model.py
.github/workflows/: deploy.yml
models/: model.pkl
src/api/v1/: routes.py
src/app/services/: model_service.py
src/core/: config.py  server.py
tests/: test_api.py  test_services.py
